--- a/vnavese/index.html
+++ b/vnavese/index.html
@@ -56,7 +56,7 @@
                 <p>Работаем с 2012 года</p>
             </div>
             <div class="col-xs-4 center_text">
-                <p>Производство и монтаж навесов из поликарбоната в Москве и МО<br>
+                <p>Производство и монтаж <br>навесов в Москве и МО<br>
                 <span>Русские монтажники</span></p>
             </div>
             <div class="col-xs-4 right_text">
@@ -73,7 +73,8 @@
     
         <div id="content" >
         <div class="my_cont">
-            <h1>Кованый навес из поликарбоната<br> <span>по цене обычного</span></h1>
+            <h1>Навес из поликарбоната <br>
+за 5 дней со скидкой 30% <span>до 25 июля</span></h1>
             <!--
             <p class="only">
                 только до 20 апреля - 3000р/м<sup>2</sup>
@@ -192,7 +193,7 @@
                                 </p>
                                 <p>*Этот вопрос необязательный</p>
                                 <p>
-                                    <button type="button" class="next__butt" style="background:#3EAD71; width:310px; border:none; margin-top:20px;margin:0px; text-align: center;box-shadow:none; height:50px;"><p style="
+                                    <button type="button" class="next__butt" style="background:#F8AE4E; width:310px; border:none; margin-top:20px;margin:0px; text-align: center;box-shadow:none; height:50px;"><p style="
                                       font-size: 22px;
                                       font-family: 'Lato';
                                       color: rgb(45, 45, 45);
@@ -213,12 +214,12 @@
                                 <p style=" font-size: 18px;   color: rgb(255, 255, 255);line-height: 1.219;">Вопрос 5 из 5</p>
                                 <p>
                                     <label for="hight">Введите длину:</label>
-                                    <input name="hight" type="text" style="margin-left:20px;height: 100%;" placeholder="Длина" id="hight" onchange="ukcalc()" value="0.5" min="0.5" max="100" step="0.1">
+                                    <input name="hight" type="number" style="margin-left:20px;height: 100%;" placeholder="Длина" id="hight" onchange="ukcalc()" value="0.5" min="0.5" max="100" step="0.1">
                                     <span class="meters">метров</span> 
                                 </p>
                                 <p>
                                     <label for="weight">Введите ширину:</label>
-                                    <input name="weight" type="text" style=" height: 100%;" placeholder="Ширина" id="weight" onchange="ukcalc()" value="0.5" min="0.5" max="100" step="0.1">
+                                    <input name="weight" type="number" style=" height: 100%;" placeholder="Ширина" id="weight" onchange="ukcalc()" value="0.5" min="0.5" max="100" step="0.1">
                                     <span class="meters">метров</span>  
                                 </p>
                                 <p class="bl" style="display:block; width:100%"></p>
@@ -227,7 +228,7 @@
                                     <span id="price"></span> руб.
                                 </div>-->
                                 <div class="for_butt">
-                                    <button id="to_get" type="button" class="navi" style="background:#3EAD71; width:310px; border:none; margin-top:20px; text-align: center;box-shadow:none; height:50px;"><p style="
+                                    <button id="to_get" type="button" class="navi" style="background:#F8AE4E; width:310px; border:none; margin-top:20px; text-align: center;box-shadow:none; height:50px;"><p style="
                                       font-size: 22px;
                                       font-family: 'Lato';
                                       color: rgb(45, 45, 45);
@@ -243,7 +244,7 @@
                             <fieldset class="step last">
                                      <legend style="font-size: 28px;
                                       font-family: 'Lato';
-                                      color: #3EAD71;
+                                      color: #F8AE4E;
                                       text-transform: uppercase;
                                       line-height: 0.784;
                                       text-align: center;
@@ -272,7 +273,7 @@
                                     <input id="email" name="email" type="email" placeholder="Ваш Email" AUTOCOMPLETE=OFF  style="" />
                                 </p>
                                 <p class="submit">
-                                    <button type="submit"  style="background:#3EAD71; width:310px; border:none; margin-top:20px; text-align: center;box-shadow:none; height:50px;"><p style="
+                                    <button type="submit"  style="background:#F8AE4E; width:310px; border:none; margin-top:20px; text-align: center;box-shadow:none; height:50px;"><p style="
                                       font-size: 22px;
                                       font-family: 'Lato';
                                       color: rgb(45, 45, 45);
