--- a/e-powers/index.html
+++ b/e-powers/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from multifour.com/projects/gum/templates/product3/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 12 Jun 2017 15:28:22 GMT -->
 <head>
     <meta charset="UTF-8">
-    <title>Product page</title>
+    <title>E-powers || Зарядные станции</title>
 
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <meta name="keywords" content="" />
@@ -24,7 +24,8 @@
 <body class="light-page">
     <div id="preloader"><div class="battery"><div class="load-line"></div></div></div>
     <div id="wrap">
-        <section id="header-carousel-single" class="pt-150 pb-150 dark text-center">
+    
+        <!--<section id="header-carousel-single" class="pt-150 pb-150 dark text-center">
             <div class="logo">
                 <p>E-powers</p>
             </div>
@@ -35,7 +36,7 @@
                     </div>
                     <div class="col-md-7 col-md-pull-5 header__slide">
                     <h1 class="mb-50">Аренда зарядных станций для Вашего бизнеса</h1>
-                        <!--<h2 class="mb-50">Аренда зарядных станций для Вашего бизнеса</h2>-->
+                        <h2 class="mb-50">Аренда зарядных станций для Вашего бизнеса</h2>
                         <a class="btn btn-lg btn-default smooth external" href="#benefit-center-text-img-text-3" target="_self"><span>Подробнее</span></a>
                         <a class="btn btn-lg btn-default smooth external"  target="_self"><span>Заказать</span></a> 
 
@@ -48,9 +49,9 @@
                 </div>
                 <div class="col-md-6 header__slide header__slide2">
                     <h1 class="mb-50">Повысьте лояльность Ваших клиентов </h1>
-                    <!--
+                    
                     <p class="mb-50">I always thought that people used to pay much for quality. But these guys changed my opinion. The quality exceeds the price many times. I recommend it to everybody.
-                    </p>-->
+                    </p>
                     <a href="#testimonials-2col-2row-img" class="btn btn-lg btn-default smooth external" target="_self"><span>Подробнее</span></a>
                     <a  class="btn btn-lg btn-default smooth external" target="_self"><span>Заказать станцию</span></a>
                 </div>
@@ -65,16 +66,22 @@
             <div class="col-md-5 col-md-pull-7 header__slide">
                 <h1 class="mb-50">Кому это будет полезно?</h1>
                 <!--<p class="mb-50">I always thought that people used to pay much for quality. But these guys changed my opinion. The quality exceeds the price many times. I recommend it to everybody.
-                </p>-->
+                </p>
                 <a href="#benefit-center-text-img-text-3" class="btn btn-lg btn-default smooth external" target="_self"><span>Узнать</span></a>
                 <a href="#benefit-center-text-img-text-3" class="btn btn-lg btn-default smooth external" target="_self"><span>Заказать</span></a>
             </div>
         </div>
     </div></div>
-    <div class="bg"></div>
-</section><section id="benefit-center-text-img-text-3" class="bg-1-color-light light pt-100 pb-100">
+    <div class="bg"></div>-->
+   
+</section><section id="benefit-center-text-img-text-3" class="bg-1-color-light light pb-100">
+ <div class="top__main__block" style="text-align:left;">
+    	<img src="images/logo2.png" alt="" style="width:400px;">
+    	<h2 style="width:400px; float:right; font-size:30px;padding-top:40px;" 		>В настоящее время сайт находится в разработке</h2>
+    </div>
 <div class="container">
-    <h2 class="mb-75 text-center">Что это такое</h2>
+	
+    <h2 class="mb-75 text-center">Зарядная станция</h2>
     <div class="row flex-md-vmiddle">
         <div class="col-md-4 col-md-push-4 text-center">
             <img src="images/4.png"  alt="Screen" class="screen">
@@ -130,7 +137,13 @@
     <div class="row flex-md-vmiddle">
         <div class="col-md-6">
             <form action="http://multifour.com/projects/gum/templates/product3/scripts/request.php" class="contact_form form-inline form-flex" novalidate="novalidate" id="subscribe-field-text-form">
-                <div class="form-group"><input type="text" class="form-control" placeholder="Ваше имя" name="NAME"></div><div class="form-group"><input type="email" class="form-control" placeholder="Ваш телефон" name="EMAIL"></div><button type="button" data-loading-text="•••" data-complete-text="Completed!" data-reset-text="Try again later..." class="btn btn-primary"><span>Оставить</span></button>
+                <div class="form-group">
+                	<input type="text" class="form-control" placeholder="Ваше имя" name="NAME">
+                </div>
+                <div class="form-group">
+                	<input type="email" class="form-control" placeholder="Ваш телефон" name="EMAIL">
+                </div>
+                <button type="button" data-loading-text="•••" data-complete-text="Completed!" data-reset-text="Try again later..." class="btn btn-primary"><span>Оставить</span></button>
             </form>
         </div>
         <div class="col-md-5 col-md-offset-1">
@@ -140,6 +153,7 @@
 </div>
 <div class="bg"></div>
 </section>
+<!--
 <section class="how">
     <div class="container">
         <h2>Как это работает</h2>
@@ -234,6 +248,7 @@
     </div>
 </div>
 <div class="bg"></div>
+-->
 </footer>
 </div>
 <footer></footer>
