--- a/e-powers/index.html
+++ b/e-powers/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=1200">
     <script src="../../../../../ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
     <script src="js/fonts.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css" />
