--- a/dance/index.html
+++ b/dance/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=1200">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <title>Галактика</title>
 
@@ -718,7 +718,7 @@
             </div>
           </div>
           <div class="col-xs-4">
-            <p class="where_footer">Разработано в H1-STUDIO.RU </p>
+            
           </div>
           <div class="col-xs-4">
 
